k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vox2vocal-ingress
  namespace: vox2vocal
spec:
  ingressClassName: nginx
  rules:
    - host: vox2vocal.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff-server
                port:
                  number: 4000
